# bertalign

./: README.md  pyproject.toml
bertalign/: __init__.py  aligner.py  corelib.py  modal_gpu.py
docs/: modal-impl.md
test/: db-example.py  smoke_test_gpu.py
